--- a/example/assets/locales/es.json
+++ b/example/assets/locales/es.json
@@ -1,6 +1,7 @@
 {
-  "You have pushed the button this many times:": "Has pulsado el botón tantas veces:",
+  "You have pushed the button this many times:": "Has presionado el botón estas veces:",
   "Toolbar height": "Altura de la barra de herramientas",
   "Flutter Demo Home Page": "Página de inicio de demostración de Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "El propósito de esta aplicación es mostrar cómo usar el paquete interactive_i18n."
+  "The purpose of this app is to show how to use the interactive_i18n package.": "El propósito de esta aplicación es mostrar cómo usar el paquete interactive_i18n.",
+  "Select language": "Selecciona el idioma"
 }
