--- a/example/assets/locales/pl.json
+++ b/example/assets/locales/pl.json
@@ -1,6 +1,7 @@
 {
-  "You have pushed the button this many times:": "Nacisnąłeś przycisk tyle razy:",
+  "You have pushed the button this many times:": "Naciśnięto przycisk tyle razy:",
   "Toolbar height": "Wysokość paska narzędzi",
-  "Flutter Demo Home Page": "Strona główna demo Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Celem tej aplikacji jest pokazanie, jak korzystać z pakietu interactive_i18n."
+  "Flutter Demo Home Page": "Strona główna demonstracji Flutter",
+  "The purpose of this app is to show how to use the interactive_i18n package.": "Celem tej aplikacji jest pokazanie, jak korzystać z pakietu interactive_i18n.",
+  "Select language": "Wybierz język"
 }
