--- a/example/assets/locales/hi.json
+++ b/example/assets/locales/hi.json
@@ -1,6 +1,7 @@
 {
-  "You have pushed the button this many times:": "आपने बटन को इतनी बार दबाया है:",
-  "Toolbar height": "टूलबार की ऊचाई",
+  "You have pushed the button this many times:": "आपने इतनी बार बटन दबाया है:",
+  "Toolbar height": "टूलबार की ऊंचाई",
   "Flutter Demo Home Page": "फ्लटर डेमो होम पेज",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "इस ऐप का उद्देश्य दिखाना है कि कैसे interactive_i18n पैकेज का उपयोग करें।"
+  "The purpose of this app is to show how to use the interactive_i18n package.": "इस ऐप का उद्देश्य यह दिखाना है कि interactive_i18n पैकेज का उपयोग कैसे करें।",
+  "Select language": "भाषा चुनिए"
 }
