--- a/example/assets/locales/it.json
+++ b/example/assets/locales/it.json
@@ -1,6 +1,7 @@
 {
   "You have pushed the button this many times:": "Hai premuto il pulsante tante volte:",
   "Toolbar height": "Altezza della barra degli strumenti",
-  "Flutter Demo Home Page": "Pagina iniziale della demo di Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Lo scopo di questa app è mostrare come utilizzare il pacchetto interactive_i18n."
+  "Flutter Demo Home Page": "Pagina principale della demo di Flutter",
+  "The purpose of this app is to show how to use the interactive_i18n package.": "Lo scopo di questa app è mostrare come utilizzare il pacchetto interactive_i18n.",
+  "Select language": "Seleziona la lingua"
 }
