--- a/example/assets/locales/ja.json
+++ b/example/assets/locales/ja.json
@@ -1,6 +1,7 @@
 {
-  "You have pushed the button this many times:": "あなたはこのボタンを何度も押しました:",
+  "You have pushed the button this many times:": "あなたはこのボタンをこれだけの回数押しました:",
   "Toolbar height": "ツールバーの高さ",
-  "Flutter Demo Home Page": "Flutterデモのホームページ",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "このアプリの目的は、interactive_i18nパッケージの使い方を示すことです。"
+  "Flutter Demo Home Page": "Flutterデモホームページ",
+  "The purpose of this app is to show how to use the interactive_i18n package.": "このアプリの目的は、interactive_i18nパッケージの使用方法を示すことです。",
+  "Select language": "言語を選択"
 }
