--- a/example/assets/locales/zh.json
+++ b/example/assets/locales/zh.json
@@ -1,6 +1,6 @@
 {
-  "You have pushed the button this many times:": "您已经按了这么多次按钮:",
+  "You have pushed the button this many times:": "您已经按了这么多次按钮：",
   "Toolbar height": "工具栏高度",
-  "Flutter Demo Home Page": "Flutter演示首页",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "这个应用的目的是展示如何使用interactive_i18n包。"
-}
+  "Flutter Demo Home Page": "Flutter演示主页",
+  "The purpose of this app is to show how to use the interactive_i18n package.": "此应用的目的是展示如何使用interactive_i18n包。",
+  "Select language": "选择语
