Use SIM card to get the country code

--- a/example/assets/locales/zh.json
+++ b/example/assets/locales/zh.json
@@ -3,4 +3,4 @@
   "Toolbar height": "工具栏高度",
   "Flutter Demo Home Page": "Flutter演示主页",
   "The purpose of this app is to show how to use the interactive_i18n package.": "此应用的目的是展示如何使用interactive_i18n包。",
-  "Select language": "选择语
+  "Select language": "选择语"
