--- a/example/assets/locales/cs.json
+++ b/example/assets/locales/cs.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Stiskli jste toto tlačítko tolikrát:",
-  "Toolbar height": "Výška nástrojové lišty",
-  "Flutter Demo Home Page": "Domovská stránka Flutter Demo",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Účelem této aplikace je ukázat, jak používat balíček interactive_i18n.",
-  "Select language": "Vyberte jazyk"
+    "You have pushed the button this many times:": "Stiskli jste toto tlačítko tolikrát:",
+    "Toolbar height": "Výška nástrojové lišty",
+    "Flutter Demo Home Page": "Domovská stránka Flutter Demo",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Účelem této aplikace je ukázat, jak používat balíček interactive_i18n.",
+    "Select language": "Vyberte jazyk",
+    "Text Description": "Popis textu",
+    "Use Device Locale": "Použít Locale zařízení",
+    "Default language:": "Výchozí jazyk:",
+    "Current language": "Aktuální jazyk",
+    "Language description": "Popis jazyka",
+    "Current device language": "Aktuální jazyk zařízení"
 }
