--- a/example/assets/locales/fi.json
+++ b/example/assets/locales/fi.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Olet painanut nappia näin monta kertaa:",
-  "Toolbar height": "Työkalurivin korkeus",
-  "Flutter Demo Home Page": "Flutter Demo Etusivu",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Tämän sovelluksen tarkoitus on näyttää, kuinka käyttää interactive_i18n -pakettia.",
-  "Select language": "Valitse kieli"
+    "You have pushed the button this many times:": "Olet painanut nappia näin monta kertaa:",
+    "Toolbar height": "Työkalurivin korkeus",
+    "Flutter Demo Home Page": "Flutter Demo Etusivu",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Tämän sovelluksen tarkoitus on näyttää, kuinka käyttää interactive_i18n -pakettia.",
+    "Select language": "Valitse kieli",
+    "Text Description": "Tekstin kuvaus",
+    "Use Device Locale": "Käytä laitteen maa-asetusta",
+    "Default language:": "Oletuskieli:",
+    "Current language": "Nykyinen kieli",
+    "Language description": "Kielen kuvaus",
+    "Current device language": "Laitteen nykyinen kieli"
 }
