--- a/example/assets/locales/fil.json
+++ b/example/assets/locales/fil.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Ito ang bilang ng beses na pindutin mo ang pindutan:",
-  "Toolbar height": "Taas ng toolbar",
-  "Flutter Demo Home Page": "Pahina ng Bahay ng Flutter Demo",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Ang layunin ng app na ito ay ipakita kung paano gamitin ang interactive_i18n package.",
-  "Select language": "Piliin ang wika"
+    "You have pushed the button this many times:": "Ito ang bilang ng beses na pindutin mo ang pindutan:",
+    "Toolbar height": "Taas ng toolbar",
+    "Flutter Demo Home Page": "Pahina ng Bahay ng Flutter Demo",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Ang layunin ng app na ito ay ipakita kung paano gamitin ang interactive_i18n package.",
+    "Select language": "Piliin ang wika",
+    "Text Description": "Paglalarawan ng Teksto",
+    "Use Device Locale": "Gamitin ang Device Locale",
+    "Default language:": "Default na wika:",
+    "Current language": "Kasalukuyang wika",
+    "Language description": "Paglalarawan ng wika",
+    "Current device language": "Kasalukuyang wika ng device"
 }
