--- a/example/assets/locales/pt.json
+++ b/example/assets/locales/pt.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Você pressionou o botão tantas vezes:",
-  "Toolbar height": "Altura da barra de ferramentas",
-  "Flutter Demo Home Page": "Página inicial da demonstração do Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "O propósito deste aplicativo é mostrar como usar o pacote interactive_i18n.",
-  "Select language": "Selecione o idioma"
+    "You have pushed the button this many times:": "Você pressionou o botão tantas vezes:",
+    "Toolbar height": "Altura da barra de ferramentas",
+    "Flutter Demo Home Page": "Página inicial da demonstração do Flutter",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "O propósito deste aplicativo é mostrar como usar o pacote interactive_i18n.",
+    "Select language": "Selecione o idioma",
+    "Text Description": "Descrição do texto",
+    "Use Device Locale": "Usar localidade do dispositivo",
+    "Default language:": "Idioma padrão:",
+    "Current language": "Língua atual",
+    "Language description": "Descrição da linguagem",
+    "Current device language": "Idioma atual do dispositivo"
 }
