--- a/example/assets/locales/ru.json
+++ b/example/assets/locales/ru.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Вы нажали на кнопку столько раз:",
-  "Toolbar height": "Высота панели инструментов",
-  "Flutter Demo Home Page": "Домашняя страница демонстрации Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Цель этого приложения - показать, как использовать пакет interactive_i18n.",
-  "Select language": "Выбрать язык"
+    "You have pushed the button this many times:": "Вы нажали на кнопку столько раз:",
+    "Toolbar height": "Высота панели инструментов",
+    "Flutter Demo Home Page": "Домашняя страница демонстрации Flutter",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Цель этого приложения - показать, как использовать пакет interactive_i18n.",
+    "Select language": "Выбрать язык",
+    "Text Description": "Текстовое описание",
+    "Use Device Locale": "Использовать локаль устройства",
+    "Default language:": "Язык по умолчанию:",
+    "Current language": "Текущий язык",
+    "Language description": "Описание языка",
+    "Current device language": "Текущий язык устройства"
 }
