--- a/example/assets/locales/vi.json
+++ b/example/assets/locales/vi.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Bạn đã nhấn nút này nhiều lần:",
-  "Toolbar height": "Chiều cao thanh công cụ",
-  "Flutter Demo Home Page": "Trang chủ Demo Flutter",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Mục đích của ứng dụng này là để chỉ cách sử dụng gói interactive_i18n.",
-  "Select language": "Chọn ngôn ngữ"
+    "You have pushed the button this many times:": "Bạn đã nhấn nút này nhiều lần:",
+    "Toolbar height": "Chiều cao thanh công cụ",
+    "Flutter Demo Home Page": "Trang chủ Demo Flutter",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Mục đích của ứng dụng này là để chỉ cách sử dụng gói interactive_i18n.",
+    "Select language": "Chọn ngôn ngữ",
+    "Text Description": "Mô tả văn bản",
+    "Use Device Locale": "Sử dụng vị trí thiết bị",
+    "Default language:": "Ngôn ngữ mặc định:",
+    "Current language": "Ngôn ngữ hiện tại",
+    "Language description": "Mô tả ngôn ngữ",
+    "Current device language": "Ngôn ngữ thiết bị hiện tại"
 }
