--- a/example/assets/locales/da.json
+++ b/example/assets/locales/da.json
@@ -1,7 +1,13 @@
 {
-  "You have pushed the button this many times:": "Du har trykket på knappen så mange gange:",
-  "Toolbar height": "Værktøjslinjehøjde",
-  "Flutter Demo Home Page": "Flutter Demo Forside",
-  "The purpose of this app is to show how to use the interactive_i18n package.": "Formålet med denne app er at vise, hvordan man bruger interactive_i18n-pakken.",
-  "Select language": "Vælg sprog"
+    "You have pushed the button this many times:": "Du har trykket på knappen så mange gange:",
+    "Toolbar height": "Værktøjslinjehøjde",
+    "Flutter Demo Home Page": "Flutter Demo Forside",
+    "The purpose of this app is to show how to use the interactive_i18n package.": "Formålet med denne app er at vise, hvordan man bruger interactive_i18n-pakken.",
+    "Select language": "Vælg sprog",
+    "Text Description": "Tekstbeskrivelse",
+    "Use Device Locale": "Brug Device Locale",
+    "Default language:": "Standardsprog:",
+    "Current language": "Aktuelt sprog",
+    "Language description": "Sprogbeskrivelse",
+    "Current device language": "Aktuelt enhedssprog"
 }
